--- a/MyScriptureJournal/ScriptureJournalMain.cshtml
+++ b/MyScriptureJournal/ScriptureJournalMain.cshtml
@@ -31,10 +31,10 @@
             width: 600px;
         }
 
-            .grid th, .grid td {
-                border: 1px solid #C0C0C0;
-                padding: 5px;
-            }
+        .grid th, .grid td {
+            border: 1px solid #C0C0C0;
+            padding: 5px;
+        }
 
         .head {
             background-color: #E8E8E8;
@@ -77,5 +77,8 @@
             )
         )
     </div>
+    <p>
+        <a href="~/AddJournalEntry">Add a movie</a>
+    </p>
 </body>
 </html>
