--- a/MyScriptureJournal/ScriptureJournalMain.cshtml
+++ b/MyScriptureJournal/ScriptureJournalMain.cshtml
@@ -68,12 +68,14 @@
             headerStyle: "head",
             alternatingRowStyle: "alt",
             columns: grid.Columns(
+                grid.Column(format: @<a href="~/EditJournalEntry?id=@item.Id">Edit</a>),
                 grid.Column("Book"),
                 grid.Column("Chapter"),
                 grid.Column("Verse"),
                 grid.Column("Text"),
                 grid.Column("Note"),
-                grid.Column("Date")
+                grid.Column("Date"),
+                grid.Column(format: @<a href="~/DeleteJournalEntry?id=@item.Id">Delete</a>)
             )
         )
     </div>
