--- a/MyScriptureJournal/EditJournalEntry.cshtml
+++ b/MyScriptureJournal/EditJournalEntry.cshtml
@@ -83,7 +83,7 @@
     @Html.ValidationSummary()
     <form method="post">
         <fieldset>
-            <legend>Journal Information</legend>
+            <legend>Entry Information</legend>
 
             <p>
                 <label for="book">Book:</label>
