--- a/MyScriptureJournal/ScriptureJournalMain.cshtml
+++ b/MyScriptureJournal/ScriptureJournalMain.cshtml
@@ -16,14 +16,14 @@
     }
 
     var selectedData = db.Query(selectCommand, searchTerm);
-    var grid = new WebGrid(source: selectedData, defaultSort: "Date", rowsPerPage: 3);
+    var grid = new WebGrid(source: selectedData, defaultSort: "Date", rowsPerPage: 5);
 }
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Movies</title>
+    <title>Scripture Journal</title>
     <style type="text/css">
         .grid {
             margin: 4px;
@@ -80,7 +80,7 @@
         )
     </div>
     <p>
-        <a href="~/AddJournalEntry">Add a movie</a>
+        <a href="~/AddJournalEntry">Add a scripture</a>
     </p>
 </body>
 </html>
